biomes o plenty changes

--- a/config/biomesoplenty/biomegen.cfg
+++ b/config/biomesoplenty/biomegen.cfg
@@ -1,5 +1,4 @@
 # Configuration file
-
 "end biomes to generate" {
     B:"Spectral Garden"=true
 }
@@ -25,13 +24,13 @@
     B:"Alps Forest"=true
     B:"Canyon Ravine"=true
     B:"Coral Reef"=true
-    B:Glacier=true
+    B:Glacier=false
     B:"Kelp Forest"=true
     B:Mangrove=true
     B:"Meadow Forest"=true
     B:Oasis=true
     B:Orchard=true
-    B:Quagmire=true
+    B:Quagmire=false
     B:Scrubland=true
     B:Silkglades=true
     B:"Spruce Woods"=true
@@ -45,7 +44,7 @@
     B:Arctic=true
     B:"Bamboo Forest"=true
     B:Bayou=true
-    B:Bog=true
+    B:Bog=false
     B:"Boreal Forest"=true
     B:Brushland=true
     B:Canyon=true
@@ -58,54 +57,54 @@
     B:"Deciduous Forest"=true
     B:Fen=true
     B:"Flower Field"=true
-    B:"Frost Forest"=true
+    B:"Frost Forest"=false
     B:"Fungi Forest"=true
     B:Garden=true
-    B:Grassland=true
+    B:Grassland=false
     B:Grove=true
-    B:Heathland=true
+    B:Heathland=false
     B:Highland=true
     B:"Jade Cliffs"=true
     B:"Lavender Fields"=true
-    B:"Lush Desert"=true
+    B:"Lush Desert"=false
     B:"Lush Swamp"=true
-    B:"Maple Woods"=true
+    B:"Maple Woods"=false
     B:Marsh=false
-    B:Meadow=true
-    B:Moor=true
+    B:Meadow=false
+    B:Moor=false
     B:Mountain=true
-    B:"Mystic Grove"=true
-    B:"Ominous Woods"=true
-    B:"Origin Valley"=true
-    B:Outback=true
+    B:"Mystic Grove"=false
+    B:"Ominous Woods"=false
+    B:"Origin Valley"=false
+    B:Outback=false
     B:Prairie=true
     B:Rainforest=true
     B:"Redwood Forest"=true
     B:"Sacred Springs"=true
     B:"Seasonal Forest"=true
     B:Shield=true
-    B:Shrubland=true
+    B:Shrubland=false
     B:Sludgepit=true
     B:"Snowy Coniferous Forest"=true
-    B:Steppe=true
+    B:Steppe=false
     B:"Temperate Rainforest"=true
     B:Thicket=true
     B:"Tropical Rainforest"=true
     B:Tundra=true
-    B:Wasteland=true
-    B:Wetland=true
+    B:Wasteland=false
+    B:Wetland=false
     B:Woodland=true
 }
 
 
 "special biomes to generate" {
     B:"Deep Ocean"=true
-    B:"Frozen Ocean"=false
+    B:"Frozen Ocean"=true
     B:Jungle=true
-    B:"Mega Taiga"=true
-    B:"Mesa Plateau"=true
-    B:"Mesa Plateau F"=true
-    B:"Mushroom Island"=true
+    B:"Mega Taiga"=false
+    B:"Mesa Plateau"=false
+    B:"Mesa Plateau F"=false
+    B:"Mushroom Island"=false
     B:Ocean=true
 }
 
@@ -141,5 +140,3 @@
     B:Taiga=true
     B:TaigaHills=true
 }
-
-
